internal class AnimationStrings
{
    internal static string AttackCooldown = "attackCooldown";
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string attacking = "attack";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumping = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCelling = "isOnCelling";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string rangedAttackTrigger = "rangedAttack";
    internal static string castFireTrigger = "castFire";
    internal static string lockAttackTrigger = "lockAttack";
    internal static string isStun = "isStun";
}
